# ANA-Dashboard

./: .dockerignore  Dockerfile  Dockerfile.prod  data.csv  docker-compose.yml  ea.csv  import.py  import_data.py  nginx.conf  pyproject.toml  requirements.txt
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
anadash/: asgi.py  settings.py  wsgi.py
dashboard/: admin.py  forms.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0003_remove_dissemination_latitude_and_more.py  0006_alter_partner_digital_services_and_more.py  0007_extensionagents.py  0008_extensionagents_index.py  0010_eventparticipants_index.py  0011_events.py  0012_events_phone_no.py  0013_alter_events_date_added_alter_events_enddate_and_more.py  0015_alter_farmers_farm_area.py  0016_alter_farmers_farm_area.py  0021_weatherdata.py
dashboard/templates/dashboard/: add_eas.html  base.html  eas.html  index.html  our_eas.html  our_farmers.html
dashboard/templatetags/: math_filters.py
env/: pyvenv.cfg
nginx/: nginx.conf
project/: event_participants.csv  import.py  manage.py  partner.csv
project/account/: admin.py
project/anadash/: urls.py
project/dashboard/: admin.py  forms.py  models.py
project/dashboard/migrations/: 0002_dissemination_farmers_f.py  0004_partner.py  0005_partner_index.py  0009_eventparticipants.py  0014_farmers.py  0017_alter_farmers_area_unit_alter_farmers_cassava_and_more.py  0018_alter_farmers_own_phone.py  0019_alter_farmers_own_phone.py  (+1 more)
static/js/: countrymap.js  dashboard.js  mapdata.js
(+6 files in other folders)
