[tool.poetry]
name = "ana-dashboard"
version = "1.0.0"
description = "Ana Dashboard"
authors = ["Sammy Barasa <barsamms@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.3"
django-livereload-server = "^0.5.1"
asgiref = "^3.7.2"
crispy-bootstrap5 = "^2024.2"
django-crispy-forms = "^2.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
python-dateutil = "^2.9.0.post0"
python-decouple = "^3.8"
pytz = "^2024.1"
six = "^1.16.0"
sqlparse = "^0.4.4"
tzdata = "^2024.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
